Equipped BlockingQueue with locks to avoid race condition. Also changed mutex object with Condition object